--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             GitHub
           </a>
           <span class="text-slate-300">/</span>
-          <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://instagram.com/rhmatadhan_" target="_blank" rel="noopener noreferrer">
+          <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://instagram.com/rhmatadhan_/" target="_blank" rel="noopener noreferrer">
             <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M8 3h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8a5 5 0 0 1 5-5Z" stroke="currentColor" stroke-width="1.6" />
               <path d="M12 9a3 3 0 1 1 0 6a3 3 0 0 1 0-6Z" stroke="currentColor" stroke-width="1.6" />
@@ -256,13 +256,13 @@
       <p class="font-semibold text-slate-900">Rahmat Ramadhan</p>
       <p>© 2026 Rahmat Ramadhan. All rights reserved.</p>
       <nav class="flex items-center gap-4">
-        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://github.com/username" target="_blank" rel="noopener noreferrer">
+        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://github.com/rhmatadhan" target="_blank" rel="noopener noreferrer">
           <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M12 3a9 9 0 0 0-2.8 17.6c.4.1.6-.2.6-.4v-2.1c-2.2.5-2.7-1-2.7-1c-.3-.9-.8-1.1-.8-1.1c-.7-.5.1-.5.1-.5c.8.1 1.2.8 1.2.8c.7 1.2 1.9.9 2.4.7c.1-.5.3-.9.5-1.1c-1.8-.2-3.6-.9-3.6-4a3.1 3.1 0 0 1 .8-2.1c-.1-.2-.4-1 .1-2.1c0 0 .7-.2 2.2.8a7.6 7.6 0 0 1 4 0c1.5-1 2.2-.8 2.2-.8c.5 1.1.2 1.9.1 2.1c.5.6.8 1.4.8 2.1c0 3.1-1.8 3.8-3.6 4c.3.2.6.7.6 1.5v2.8c0 .2.2.5.6.4A9 9 0 0 0 12 3Z" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
           GitHub
         </a>
-        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://wa.me/628123456789" target="_blank" rel="noopener noreferrer">
+        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://wa.me/6283167598809" target="_blank" rel="noopener noreferrer">
           <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M20 11.5a7.5 7.5 0 1 1-3.2-6.1" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" />
             <path d="M7.5 17.5l-1 3.5l3.5-1" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
@@ -270,7 +270,7 @@
           </svg>
           WhatsApp
         </a>
-        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://instagram.com/username" target="_blank" rel="noopener noreferrer">
+        <a class="inline-flex items-center gap-2 transition hover:text-slate-900" href="https://instagram.com/rhmatadhan_/" target="_blank" rel="noopener noreferrer">
           <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M8 3h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8a5 5 0 0 1 5-5Z" stroke="currentColor" stroke-width="1.6" />
             <path d="M12 9a3 3 0 1 1 0 6a3 3 0 0 1 0-6Z" stroke="currentColor" stroke-width="1.6" />
